tests/errors/function_literal_arg_mismatch.dang
let f = { x: Int! => x + 1 }

f("hey")
